--- a/Flashcard/style.css
+++ b/Flashcard/style.css
@@ -7,9 +7,24 @@
 }
 
 body{
-    margin: 0 auto;
+    margin: 2rem auto;
+    margin-top: 0;
     width: 100%;
     width: 100vw;
+}
+
+.home{
+    margin-bottom: 2rem;
+    border: 2px solid black;
+    text-align: left;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    font-size: 3rem;
+    font-family: 'Girassol', cursive;
+    
 }
 
 /* rendering the buttons flex */
