--- a/src/Quiz/style.css
+++ b/src/Quiz/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     text-align: center;
+    font-family: 'Roboto Mono', monospace;
 }
 
 body{
@@ -10,6 +11,20 @@ body{
     margin-top: 0;
     width: 100%;
     width: 100vw;
+}
+
+button{
+    padding: 10px;
+    width: 150px;
+    border-radius: 5px;
+    border: 2px solid rgb(232, 190, 79);
+    font-size: 14px;
+    background-color: rgb(235, 200, 106);
+}
+
+/* special styling for the next button */
+.next{
+    margin-top: 0.5rem;
 }
 
 .Quiz-Modal{
@@ -36,14 +51,22 @@ body{
 
 /* styling for the actual flash card  */
 .Quiz{
-    /* display: none; */
+    display: flex;
+    flex-direction: column;
     border: 2px solid white;
     margin: 20px auto;
     margin-top: 2.5rem;
+    padding: 3rem;
     height: 85%;
     width: 80%;
     color: white;
     position: relative;
+}
+.quiz-options{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
 }
 
 .close-modal {
@@ -60,4 +83,15 @@ body{
 .close-modal:focus {
     color: #999;
     cursor: pointer;
+}
+
+/* inside the modal */
+.Question-box{
+    margin: 4rem auto;
+}
+h3{
+    font-size: 4rem;
+}
+.option-box{
+    margin: 1rem;
 }
