--- a/src/Quiz/style.css
+++ b/src/Quiz/style.css
@@ -11,6 +11,21 @@ body{
     margin-top: 0;
     width: 100%;
     width: 100vw;
+    
+}
+
+.home{
+    margin: 2rem;
+    /* border: 2px solid black; */
+    text-align: left;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    font-size: 3rem;
+    font-family: 'Girassol', cursive;
+    
 }
 
 button{
