--- a/src/Quiz/style.css
+++ b/src/Quiz/style.css
@@ -72,7 +72,7 @@ button{
 }
 
 /* styling for the actual flash card  */
-.Quiz{
+.quiz-container{
     display: flex;
     flex-direction: column;
     border: 2px solid white;
