--- a/src/Quiz/style.css
+++ b/src/Quiz/style.css
@@ -36,6 +36,7 @@ a{
 }
 
 button{
+    margin: 1rem;
     padding: 10px;
     width: 150px;
     border-radius: 5px;
@@ -94,7 +95,7 @@ button{
     display: flex;
     flex-direction: column;
     border: 2px solid white;
-    /* margin: 2rem; */
+    margin: 2rem;
     margin-top: 2.5rem;
     padding: 3rem;
     height: 85%;
@@ -127,7 +128,7 @@ button{
 
 /* inside the modal */
 .question{
-    margin-top: 5rem;
+    margin-top: 7rem;
     margin-bottom: 2rem;
     font-size: 2rem;
 }
@@ -143,4 +144,11 @@ button{
 label{
     display: block;
     text-align: left;
+}
+
+#results{
+    text-align: right;
+    width: 100%;
+    padding-top: 2rem;
+    padding-right: 4rem;
 }
