--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -114,13 +114,9 @@ a:hover{
     a{
         font-size: 2rem;
     }
-
-
 }
+
 @media only screen and (max-width: 585px){
-    .headertag{
-        margin-top: 6rem;
-    }
     .link-Button{
         padding-top: 1rem;
         width: 40%;
@@ -174,10 +170,11 @@ a:hover{
     }
 }
 
+
+
 @media only screen and (max-width: 320px){
     .headertag{
         font-size: 2.1rem;
-        margin-top: 6rem;
     }
     .link-Button{
         padding-top: 0.5rem;
@@ -185,6 +182,12 @@ a:hover{
     }
     a{
         font-size: 0.8rem;
+    }
+}
+
+@media only screen and (max-height: 375px){
+    .headertag{
+        margin-top: 3rem;
     }
 }
 
