--- a/src/Quiz/style.css
+++ b/src/Quiz/style.css
@@ -278,14 +278,16 @@ label{
         margin: 0;
     }
 
-}@media only screen and (max-height: 375px){
+}
+
+@media only screen and (max-height: 375px){
     .question{
         padding: 0rem;
         margin-top: 1rem;
-        font-size: 1.5rem;
+        font-size: 8p;
     }
     .answers{
-        font-size: 1rem;
+        font-size: 4px;
         display: block;
     }
     label{
